tests/semantic/while_err2.expected

Semantic Error [line 4]: value: "true"
	Invalid conditional type: Expected type(s) 'Boolean'; found 'Integer' instead.
