tests/semantic/while_err2.mtp
const true := 1;
var a : integer;
begin
	while (true) do
	      a := a + 1;

end.